--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
     "hoist-non-react-statics": "^3.0.1",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "recompose": "^0.30.0",
     "underscore": "^1.9.1",
     "validate.js": "^0.12.0"
   },
   "description": "Forms",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.1.1",
     "prettier": "^1.14.3",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-uglify": "^6.0.0",
+    "uglifyjs-webpack-plugin": "^2.0.1"
   },
   "keywords": [
     "forms"
@@ -35,6 +40,7 @@
     "react": "^16.5.2"
   },
   "scripts": {
+    "build": "NODE_ENV=development rollup -c -o dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "version": "1.0.0"
