--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": ">=1.2.0",
     "lint-staged": ">=8.1.0",
     "prettier": ">=1.15.3",
+    "react": ">=16.6.3",
     "rollup": ">=0.67.4",
     "rollup-plugin-babel": ">=4.0.3",
     "rollup-plugin-commonjs": ">=9.2.0",
@@ -45,7 +46,8 @@
     "prop-types": "^15.6.2"
   },
   "scripts": {
-    "build": "NODE_ENV=development rollup -c"
+    "build": "rollup -c",
+    "start": "rollup -c -w"
   },
   "version": "1.0.0"
 }
