--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "description": "Forms",
   "devDependencies": {
     "@babel/core": ">=7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-class-properties": ">=7.2.1",
     "@babel/plugin-proposal-export-namespace-from": ">=7.2.0",
     "@babel/plugin-transform-runtime": ">=7.2.0",
     "@babel/preset-env": ">=7.2.0",
@@ -20,6 +20,7 @@
     "eslint-plugin-prettier": ">=3.0.0",
     "eslint-plugin-react": ">=7.11.1",
     "husky": ">=1.2.0",
+    "jest": ">=23.6.0",
     "lint-staged": ">=8.1.0",
     "prettier": ">=1.15.3",
     "react": ">=16.6.3",
@@ -27,7 +28,7 @@
     "rollup-plugin-babel": ">=4.0.3",
     "rollup-plugin-commonjs": ">=9.2.0",
     "rollup-plugin-node-resolve": ">=3.4.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-peer-deps-external": ">=2.2.0",
     "rollup-plugin-replace": ">=2.1.0",
     "rollup-plugin-uglify": ">=6.0.0"
   },
@@ -47,7 +48,10 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "start": "rollup -c -w"
+    "start": "rollup -c -w",
+    "test": "jest --silent",
+    "test:ci": "npm test -- --maxWorkers='4' --no-cache --silent",
+    "test:watch": "jest --watch"
   },
   "version": "1.0.0"
 }
