--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
     "@babel/runtime": "^7.2.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "hoist-non-react-statics": "^3.2.1",
+    "regenerator-runtime": "^0.13.1",
     "underscore": "^1.9.1",
     "validate.js": "^0.12.0"
   },
   "description": "Forms",
   "devDependencies": {
-    "@babel/core": ">=7.2.0",
+    "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": ">=7.2.1",
     "@babel/plugin-proposal-export-namespace-from": ">=7.2.0",
     "@babel/plugin-transform-runtime": ">=7.2.0",
