--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
     "hoist-non-react-statics": "^3.2.1",
-    "underscore": "^1.9.1",
+    "underscore-es": "^1.9.8",
     "validate.js": "^0.12.0"
   },
-  "description": "Forms",
+  "description": "Build forms in React as you do in HTML (with some 🍬!!!)",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
+    "@babel/core": ">=7.2.0",
     "@babel/plugin-proposal-class-properties": ">=7.2.1",
     "@babel/plugin-proposal-export-namespace-from": ">=7.2.0",
     "@babel/plugin-transform-runtime": ">=7.2.0",
     "@babel/preset-env": ">=7.2.0",
     "@babel/preset-react": ">=7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/runtime": ">=7.2.0",
+    "babel-core": ">=7.0.0-bridge.0",
     "babel-eslint": ">=10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": ">=23.6.0",
     "eslint": ">=5.9.0",
     "eslint-config-prettier": ">=3.3.0",
     "eslint-plugin-prettier": ">=3.0.0",
@@ -25,20 +26,23 @@
     "lint-staged": ">=8.1.0",
     "prettier": ">=1.15.3",
     "react": ">=16.6.3",
-    "regenerator-runtime": "^0.13.1",
+    "regenerator-runtime": ">=0.13.1",
     "rollup": ">=0.67.4",
     "rollup-plugin-babel": ">=4.0.3",
+    "rollup-plugin-babel-minify": ">=6.2.0",
+    "rollup-plugin-cleaner": ">=0.2.0",
     "rollup-plugin-commonjs": ">=9.2.0",
     "rollup-plugin-node-resolve": ">=3.4.0",
     "rollup-plugin-peer-deps-external": ">=2.2.0",
     "rollup-plugin-replace": ">=2.1.0",
-    "rollup-plugin-uglify": ">=6.0.0"
+    "rollup-plugin-visualizer": ">=0.9.2"
   },
   "files": [
     "dist"
   ],
   "keywords": [
-    "forms"
+    "forms",
+    "react"
   ],
   "license": "MIT",
   "main": "dist/index.js",
@@ -50,6 +54,7 @@
   },
   "scripts": {
     "build": "rollup -c",
+    "prepare": "NODE_ENV=production npm run build",
     "start": "rollup -c -w",
     "test": "jest --silent",
     "test:ci": "npm test -- --maxWorkers='4' --no-cache --silent",
