--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rollup-plugin-node-resolve": ">=3.4.0",
     "rollup-plugin-peer-deps-external": ">=2.2.0",
     "rollup-plugin-replace": ">=2.1.0",
+    "rollup-plugin-size-snapshot": "^0.7.0",
     "rollup-plugin-visualizer": ">=0.9.2"
   },
   "files": [
