--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
-    "hoist-non-react-statics": "^3.2.1",
+    "hoist-non-react-statics": "^3.3.0",
     "underscore-es": "^1.9.8",
     "validate.js": "^0.12.0"
   },
   "description": "Build forms in React as you do in HTML (with some 🍬!!!)",
   "devDependencies": {
-    "@babel/core": ">=7.2.2",
-    "@babel/plugin-proposal-class-properties": ">=7.2.1",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-export-namespace-from": ">=7.2.0",
-    "@babel/plugin-transform-runtime": ">=7.2.0",
-    "@babel/preset-env": ">=7.2.0",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": ">=7.0.0",
-    "@babel/runtime": ">=7.2.0",
+    "@babel/runtime": "^7.3.4",
     "babel-core": ">=7.0.0-bridge.0",
     "babel-eslint": ">=10.0.1",
-    "babel-jest": ">=23.6.0",
-    "eslint": ">=5.10.0",
-    "eslint-config-prettier": ">=3.3.0",
-    "eslint-plugin-prettier": ">=3.0.0",
-    "eslint-plugin-react": ">=7.11.1",
-    "husky": ">=1.3.0",
-    "jest": ">=23.6.0",
-    "lint-staged": ">=8.1.0",
-    "prettier": ">=1.15.3",
-    "react": ">=16.7.0",
+    "babel-jest": "^24.1.0",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
+    "jest": "^24.1.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
     "regenerator-runtime": ">=0.13.1",
-    "rollup": ">=0.68.1",
-    "rollup-plugin-babel": ">=4.1.0",
-    "rollup-plugin-babel-minify": ">=6.2.0",
+    "rollup": "^1.4.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel-minify": "^7.0.0",
     "rollup-plugin-cleaner": ">=0.2.0",
-    "rollup-plugin-commonjs": ">=9.2.0",
-    "rollup-plugin-node-resolve": ">=4.0.0",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-peer-deps-external": ">=2.2.0",
     "rollup-plugin-replace": ">=2.1.0",
-    "rollup-plugin-size-snapshot": ">=0.7.0",
-    "rollup-plugin-visualizer": ">=0.9.2"
+    "rollup-plugin-size-snapshot": "^0.8.0",
+    "rollup-plugin-visualizer": "^1.0.2"
   },
   "files": [
     "dist"
@@ -56,8 +57,8 @@
   "module": "dist/index.module.js",
   "name": "spooner",
   "peerDependencies": {
-    "react": "^16.6.3",
-    "prop-types": "^15.6.2"
+    "react": "^16.8.0",
+    "prop-types": "^15.6.0"
   },
   "repository": "adelarosab/spooner",
   "scripts": {
