--- a/package.json
+++ b/package.json
@@ -7,37 +7,37 @@
   },
   "description": "Build forms in React as you do in HTML (with some 🍬!!!)",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-export-namespace-from": ">=7.2.0",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": ">=7.0.0",
-    "@babel/runtime": "^7.3.4",
+    "@babel/runtime": "^7.4.2",
     "babel-core": ">=7.0.0-bridge.0",
     "babel-eslint": ">=10.0.1",
-    "babel-jest": "^24.1.0",
-    "eslint": "^5.15.1",
+    "babel-jest": "^24.5.0",
+    "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
-    "jest": "^24.1.0",
+    "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "regenerator-runtime": ">=0.13.1",
-    "rollup": "^1.4.1",
+    "react": "^16.8.5",
+    "regenerator-runtime": "^0.13.2",
+    "rollup": "^1.7.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-babel-minify": "^7.0.0",
+    "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-cleaner": ">=0.2.0",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-peer-deps-external": ">=2.2.0",
-    "rollup-plugin-replace": ">=2.1.0",
+    "rollup-plugin-replace": "^2.1.1",
     "rollup-plugin-size-snapshot": "^0.8.0",
-    "rollup-plugin-visualizer": "^1.0.2"
+    "rollup-plugin-visualizer": "^1.1.0"
   },
   "files": [
     "dist"
