--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "babel-eslint": ">=10.0.1",
     "babel-jest": "^24.5.0",
     "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
@@ -29,11 +32,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "regenerator-runtime": "^0.13.2",
-    "rollup": "^1.7.0",
+    "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-cleaner": ">=0.2.0",
-    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-commonjs": "^9.2.2",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-peer-deps-external": ">=2.2.0",
     "rollup-plugin-replace": "^2.1.1",
@@ -64,12 +67,13 @@
   "repository": "adelarosab/spooner",
   "scripts": {
     "build": "rollup -c",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|md|yml)\"",
+    "lint": "eslint \"src/**/*.js\" --fix --max-warnings 0",
     "postversion": "gitmoji --init",
     "prepare": "NODE_ENV=production npm run build",
     "preversion": "gitmoji --remove",
     "start": "rollup -c -w",
     "test": "jest --silent",
-    "test:ci": "npm test -- --maxWorkers='4' --no-cache --silent",
     "test:watch": "jest --watch"
   },
   "version": "1.3.2"
