:heavy_plus_sign: Replacing rollup-plugin-cleaner by rollup-plugin-delete

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-babel-minify": "^8.0.0",
-    "rollup-plugin-cleaner": ">=0.2.0",
     "rollup-plugin-commonjs": "^9.2.2",
+    "rollup-plugin-delete": "^0.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-peer-deps-external": ">=2.2.0",
     "rollup-plugin-replace": "^2.1.1",
