--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,4 @@
 {
-  "*.js": ["eslint --fix", "git add"]
+  "*.(js|json|md|yml)": ["prettier --write", "git add"],
+  "*.js": ["eslint --fix --max-warnings 0", "git add"]
 }
