:arrow_up: Upgrading dependencies

--- a/package.json
+++ b/package.json
@@ -1,56 +1,55 @@
 {
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
-    "hoist-non-react-statics": "^3.3.0",
-    "uncontrollable": "^6.1.0",
-    "underscore-es": "^1.9.8",
-    "validate.js": "^0.12.0"
+    "uncontrollable": "^7.0.0",
+    "uuid": "^3.3.2",
+    "validate.js": "^0.13.1"
   },
   "description": "Build forms in React as you do in HTML (with some 🍬!!!)",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-proposal-export-namespace-from": ">=7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": ">=7.0.0",
-    "@babel/runtime": "^7.4.2",
+    "@babel/runtime": "^7.5.0",
     "babel-core": ">=7.0.0-bridge.0",
-    "babel-eslint": ">=10.0.1",
-    "babel-jest": "^24.5.0",
-    "eslint": "^5.15.3",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "husky": "^1.3.1",
-    "jest": "^24.5.0",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4",
+    "eslint-plugin-react": "^7.13.0",
+    "husky": "^3.0.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.0.2",
+    "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
-    "react": "^16.8.5",
+    "react": "^16.8.6",
     "regenerator-runtime": "^0.13.2",
-    "rollup": "^1.7.3",
+    "rollup": "^1.16.6",
+    "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-babel-minify": "^8.0.0",
-    "rollup-plugin-commonjs": "^9.2.2",
-    "rollup-plugin-delete": "^0.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-peer-deps-external": ">=2.2.0",
-    "rollup-plugin-replace": "^2.1.1",
-    "rollup-plugin-size-snapshot": "^0.8.0",
-    "rollup-plugin-visualizer": "^1.1.0"
+    "rollup-plugin-babel-minify": "^9.0.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-delete": "^1.0.0",
+    "rollup-plugin-node-resolve": "^5.0.3",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-size-snapshot": "^0.9.0",
+    "rollup-plugin-visualizer": "^2.4.1",
+    "underscore-es": "^1.9.8"
   },
   "files": [
-    "dist"
+    "dist",
+    "index.js",
+    "index.module.js"
   ],
   "keywords": [
     "form",
     "forms",
-    "high order component",
-    "hoc",
     "react",
     "spooner",
     "validate",
@@ -67,10 +66,12 @@
   "repository": "adelarosab/spooner",
   "scripts": {
     "build": "rollup -c",
-    "format": "prettier --ignore-path .gitignore -l --write \"**/*.+(js|json|md|yml)\"",
-    "lint": "eslint \"src/**/*.js\" --fix --max-warnings 0",
+    "format": "npm run format:ci -- --write",
+    "format:ci": "prettier --ignore-path .gitignore -l \"**/*.+(js|json|md|yml)\"",
+    "lint": "eslint \"src/**/*.js\" --fix",
+    "lint:ci": "npm run lint -- --max-warnings 0",
     "postversion": "gitmoji --init",
-    "prepare": "NODE_ENV=production npm run build",
+    "prepare": "gitmoji -i && NODE_ENV=production npm run build && npm run build",
     "preversion": "gitmoji --remove",
     "start": "rollup -c -w",
     "test": "jest --silent",
