:heavy_plus_sign: Adding dev dependencies

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.3",
     "regenerator-runtime": "^0.13.2",
     "rollup": "^1.16.6",
     "rollup-plugin-auto-external": "^2.0.0",
