--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
     "uncontrollable": "^7.0.0",
+    "underscore-es": "^1.9.8",
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1"
   },
@@ -41,8 +42,7 @@
     "rollup-plugin-node-resolve": "^5.0.3",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-size-snapshot": "^0.9.0",
-    "rollup-plugin-visualizer": "^2.4.1",
-    "underscore-es": "^1.9.8"
+    "rollup-plugin-visualizer": "^2.4.1"
   },
   "files": [
     "dist",
