--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
-    "uncontrollable": "^7.0.0",
+    "uncontrollable": "^7.1.1",
     "uuid": "^3.3.3",
     "validate.js": "^0.13.1"
   },
   "description": "Build forms in React as you do in HTML (with some 🍬!!!)",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": ">=7.0.0",
-    "@babel/runtime": "^7.5.5",
-    "@testing-library/react-hooks": "^2.0.1",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/runtime": "^7.7.2",
+    "@testing-library/react-hooks": "^3.2.1",
     "babel-core": ">=7.0.0-bridge.0",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.2.2",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-canonical": "^17.3.4",
-    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-canonical": "^17.8.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "husky": "^3.0.4",
+    "eslint-plugin-react": "^7.16.0",
+    "husky": "^3.0.9",
     "jest": "^24.9.0",
-    "lint-staged": "^9.2.3",
+    "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-hot-loader": "^4.12.11",
-    "react-test-renderer": "^16.9.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-hot-loader": "^4.12.16",
+    "react-test-renderer": "^16.11.0",
     "regenerator-runtime": "^0.13.3",
-    "rollup": "^1.20.2",
+    "rollup": "^1.26.3",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-babel-minify": "^9.0.0",
-    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-babel-minify": "^9.1.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-delete": "^1.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-size-snapshot": "^0.10.0",
-    "rollup-plugin-visualizer": "^2.5.4"
+    "rollup-plugin-visualizer": "^2.7.2"
   },
   "files": [
     "dist",
