--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
@@ -44,7 +45,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-size-snapshot": "^0.10.0",
-    "rollup-plugin-visualizer": "^3.3.0"
+    "rollup-plugin-visualizer": "^3.3.0",
+    "typescript": "^3.7.2"
   },
   "files": [
     "dist",
