--- a/.jestrc
+++ b/.jestrc
@@ -1,10 +1,5 @@
 module.exports = {
   collectCoverageFrom: ['src/**/*.js'],
   coverageDirectory: '<rootDir>/coverage',
-  setupFiles: ['./lib/jest/shim.js', './lib/jest/polyfill.js'],
-  testMatch: ['<rootDir>/test/**/*.test.js'],
-  transform: {
-    '^.+\\.js': 'babel-jest',
-  },
-  transformIgnorePatterns: ['<rootDir>/node_modules/'],
+  testMatch: ['<rootDir>/test/**/*.spec.js'],
 };
