--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.(js|json|md|yml)": ["prettier --write", "git add"],
-  "*.js": ["eslint --fix --max-warnings 0", "git add"]
+  "*.(js|jsx|json|md|ts|tsx|yml)": ["prettier --write"],
+  "*.(js|jsx|ts|tsx)": ["eslint --fix --max-warnings 0"]
 }
