--- a/package.json
+++ b/package.json
@@ -1,52 +1,35 @@
 {
   "author": "Adrian de la Rosa <adrian@joinedapp.com>",
   "dependencies": {
-    "uncontrollable": "^7.1.1",
-    "uuid": "^3.3.3",
-    "validate.js": "^0.13.1"
+    "uncontrollable": "^7.2.1",
+    "uuid": "^8.3.2"
   },
   "description": "Build forms in React as you do in HTML (with some 🍬!!!)",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/runtime": "^7.7.4",
-    "@testing-library/react-hooks": "^3.2.1",
-    "babel-core": ">=7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-canonical": "^18.1.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.18",
-    "react-test-renderer": "^16.12.0",
-    "regenerator-runtime": "^0.13.3",
-    "rollup": "^1.27.8",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-babel-minify": "^9.1.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-delete": "^1.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-size-snapshot": "^0.10.0",
-    "rollup-plugin-visualizer": "^3.3.0",
-    "typescript": "^3.7.2"
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/uuid": "^8.3.0",
+    "esbuild": "^0.11.12",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "ts-jest": "^26.5.5",
+    "typescript": "^4.2.4"
   },
   "files": [
     "dist",
@@ -66,21 +49,23 @@
   "module": "dist/index.module.js",
   "name": "spooner",
   "peerDependencies": {
-    "react": "^16.9.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0"
   },
   "repository": "adelarosab/spooner",
   "scripts": {
-    "build": "rollup -c",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:ci": "tsc && npm run build",
+    "build:cjs": "esbuild ./src/index.ts --bundle --format=cjs --outfile=./dist/index.cjs.js",
+    "build:esm": "esbuild ./src/index.ts --bundle --format=esm --outfile=./dist/index.esm.js",
     "format": "npm run format:ci -- --write",
     "format:ci": "prettier --ignore-path .gitignore -l \"**/*.+(js|json|md|yml)\"",
     "lint": "eslint \"src/**/*.js\" --fix",
     "lint:ci": "npm run lint -- --max-warnings 0",
-    "postversion": "gitmoji --init",
-    "prepare": "gitmoji -i && NODE_ENV=production npm run build && npm run build",
-    "preversion": "gitmoji --remove",
-    "start": "rollup -c -w",
+    "prepare": "npm run build && husky install",
+    "start": "npm run test:watch",
     "test": "jest --silent",
+    "test:ci": "npm run test -- --coverage",
     "test:watch": "jest --watch"
   },
   "version": "2.1.9"
