--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@semantic-release/github": "^7.2.1",
+    "@semantic-release/npm": "^7.1.1",
     "@types/jest": "^26.0.22",
     "@types/uuid": "^8.3.0",
     "esbuild": "^0.11.12",
@@ -28,6 +30,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "semantic-release": "^17.4.2",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
@@ -63,10 +66,12 @@
     "lint": "eslint \"src/**/*.js\" --fix",
     "lint:ci": "npm run lint -- --max-warnings 0",
     "prepare": "npm run build && husky install",
+    "release": "semantic-release",
     "start": "npm run test:watch",
     "test": "jest --silent",
     "test:ci": "npm run test -- --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "semantic-release": "semantic-release"
   },
-  "version": "2.1.9"
+  "version": "0.0.0-development"
 }
