--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@semantic-release/github": "^7.2.1",
     "@semantic-release/npm": "^7.1.1",
+    "@testing-library/dom": "^7.30.4",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.3",
     "@types/uuid": "^8.3.0",
     "esbuild": "^0.11.12",
     "eslint": "^7.24.0",
@@ -27,6 +32,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "lodash": "^4.17.21",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
