--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,45 @@
 {
   "env": {
-    "node": true
+    "browser": true
   },
-  "extends": ["eslint:recommended", "airbnb", "plugin:jsdoc/recommended", "prettier"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript",
+    "eslint:recommended",
+    "airbnb",
+    "plugin:jsdoc/recommended",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
   "plugins": ["import", "jsdoc", "promise", "sort-keys-fix"],
-  "rules": {},
+  "rules": {
+    "@typescript-eslint/no-empty-function": [
+      "error",
+      {
+        "allow": ["arrowFunctions"]
+      }
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": true
+      }
+    ],
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "import/no-unresolved": "off",
+    "no-empty-function": "off",
+    "no-use-before-define": "off",
+    "react/jsx-filename-extension": ["error", { "extensions": [".jsx", ".tsx"] }],
+    "react/require-default-props": [
+      "error",
+      {
+        "ignoreFunctionalComponents": true
+      }
+    ]
+  },
   "settings": {}
 }
