--- a/__test__/.eslintrc
+++ b/__test__/.eslintrc
@@ -15,6 +15,7 @@
   ],
   "plugins": ["import", "jest", "jsdoc", "promise", "sort-keys-fix"],
   "rules": {
+    "import/extensions": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "import/no-unresolved": "off",
     "no-use-before-define": "off",
